mobile: fixed article body text overflow; fixed "go" btn not being clickable; improved overall design

--- a/style.css
+++ b/style.css
@@ -278,13 +278,13 @@ input::placeholder {
     flex-direction: column;
 }
 
-.articleBody:first-of-type {
-    transform: translateY(0);
-}
+
+
 
 .articleBody {
-    margin-bottom: 0;
+    margin-bottom: 7rem;
     transform: translateY(-25%);
+    width: 100%;
 }
 
 .articleBody h2 {
@@ -302,15 +302,16 @@ input::placeholder {
 }
 
 .articleBody span {
+    line-height: 1;
     display: block;
     font-family: forma-djr-display,sans-serif;
     font-weight: 700;
     font-style: normal;
-    position: relative;
-    transform: translateY(70%);
+    position: absolute;
+    transform: translateY(-10%);
     z-index: 0;
     color: #2F3E43;
-    font-size: 120pt;
+    font-size: 100pt;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
@@ -335,6 +336,13 @@ input::placeholder {
     }
 }
 /* small desktop / tablet */
+
+@media screen and (min-width: 1000px){
+    .articleBody:first-of-type {
+        margin-top: 7rem;
+    }
+}
+
 @media screen and (max-width: 1000px) {
     #busIllustration {
         display: none;
@@ -352,6 +360,18 @@ input::placeholder {
         margin-right: 0 !important;
         justify-content: center !important;
         width: 100% !important;
+    }
+    .articleBody span {
+        font-size: 80pt;
+    }
+    #lowerContent {
+        margin-top: 10rem;
+    }
+}
+
+@media screen and (max-width: 550px) {
+    #lowerContent {
+        margin-top: 15rem;
     }
 }
 
